# backend

./: .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
backend/: settings.py  urls.py
company/: admin.py  models.py  serializers.py  urls.py  views.py
company/migrations/: 0001_initial.py
core/: admin.py  models.py
core/migrations/: 0001_initial.py  0002_user_company.py
